update seo image link

--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ organizerLink: "https://facebook.com/WARPCON"
 # Head
 metaKeywords: "convention, ttrpgs, ccgs, wargames, ucc, cork, dnd, cyberpunk, magic: the gathering"
 twitterAccount: "@warpcon"
-socialImageSrcGooglePlus: "/img/seo/sharing-google-plus.png"
-socialImageSrcTwitter: "/img/seo/sharing-twitter.png"
-socialImageSrcFacebook: "/img/seo/sharing-facebook.png"
+socialImageSrcGooglePlus: "/img/seo/logos.png"
+socialImageSrcTwitter: "/img/seo/logos.png"
+socialImageSrcFacebook: "/img/seo/logos.png"
 
 # Documents
 # c4pUrl: "https://bit.ly/dfua-c4p"
