--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ rightNavigationButtons:
 
 # Hero Block
 heroImage: "hero.jpg"
-# heroTitle: "Warpcon 33 <typeout> Jan, 23"
-# eventDate: "January 27th-29th, 2023"
+heroTitle: "Warpcon 33 Jan, 23"
+eventDate: "January 27th-29th, 2023"
 typeoutTextValues: '"", "TTRPGs", "CCGs", "Wargames", "UCC", "Cork"'
 typeoutFallback: ""
 heroButtons:
