--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ rightNavigationButtons:
 
 # Hero Block
 heroImage: "hero.jpg"
-heroTitle: "Warpcon 33 Jan, 23"
+heroTitle: "Warpcon 33"
 eventDate: "January 27th-29th, 2023"
 typeoutTextValues: '"", "TTRPGs", "CCGs", "Wargames", "UCC", "Cork"'
 typeoutFallback: ""
