--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,7 @@ ticketsInfo: "Tickets can also be purchased at the reception desk on the day. Fo
 ticketsOffers:
  -
   name: "CCGs Pass"
-  price: "5"
+  price: ""
   ribbon: "Optional"
   priceCurrency: "EUR"
   ticketsNumber: ""
@@ -153,7 +153,7 @@ ticketsOffers:
   # validThrough: "2014-09-30T23:59"
  -
   name: "General Admission"
-  price: "25"
+  price: ""
   priceCurrency: "EUR"
   ticketsNumber: ""
   featured: true
@@ -165,7 +165,7 @@ ticketsOffers:
   # disabled: true
  -
   name: "Wargames Pass"
-  price: "10"
+  price: ""
   ribbon: "Optional"
   priceCurrency: "EUR"
  # buyButtonLink: "https://warpcon.eventbrite.com/"
