--- a/_config.yml
+++ b/_config.yml
@@ -142,34 +142,34 @@ ticketsInfo: "Tickets can also be purchased at the reception desk on the day. Fo
 ticketsOffers:
  -
   name: "CCGs Pass"
-  price: "Coming soon"
+  price: ""
   ribbon: "Optional"
   priceCurrency: "EUR"
   ticketsNumber: ""
  # buyButtonLink: "https://warpcon.eventbrite.com/"
-  buyButtonText: "Buy Now"
+  buyButtonText: "Coming soon"
   ticketContentList: ["Access to CCGs rooms", "Access to Pokemon, Digimon and MTG games"]
   # validFrom: "2014-08-25T10:00"
   # validThrough: "2014-09-30T23:59"
  -
   name: "General Admission"
-  price: "Coming soon"
+  price: ""
   priceCurrency: "EUR"
   ticketsNumber: ""
   featured: true
  # buyButtonLink: "https://warpcon.eventbrite.com/"
-  buyButtonText: "Buy Now"
+  buyButtonText: "Coming soon"
   ticketContentList: ["Admission to Warpcon convention", "Access to all boardgames and TTRPGs", "Access to trader hall"]
   # validFrom: "2014-10-01T00:00"
   # validThrough: "2014-10-23T23:59"
   # disabled: true
  -
   name: "Wargames Pass"
-  price: "Coming soon"
+  price: ""
   ribbon: "Optional"
   priceCurrency: "EUR"
  # buyButtonLink: "https://warpcon.eventbrite.com/"
-  buyButtonText: "Buy Now"
+  buyButtonText: "Coming soon"
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   ticketContentList: ["Access to Wargames rooms", "Access to Warhammer and the Bloodbowl tournament"]
 
