--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ socialImageSrcFacebook: "/img/seo/logos.png"
 # Navigation
 navigationLinks:
  - {permalink: "/", text: "Home"}
- - {permalink: "/games/", text: "Games"}
- - {permalink: "/schedule", text: "Schedule"}
+# - {permalink: "/games/", text: "Games"}
+#- {permalink: "/schedule", text: "Schedule"}
 #  - {permalink: "/speakers/", text: "Speakers"}
 #  - {permalink: "/team/", text: "Team"}
 #  - {permalink: "/logistics/", text: "Logistics"}
