--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ aboutBlock:
  - {title: "TTRPGs",          image: "ttrpgs.jpg",      text: "D&D5e, Cyberpunk and many other TTRPGs on Friday, Saturday and Sunday."}
  - {title: "CCGs",            image: "ccgs.jpg",        text: "Yu-Gi-Oh, Magic the Gathering, Pokemon and Digimon events & tournaments will be hosted by Sandbox."}
  - {title: "LARPs",           image: "larps.jpg",       text: "On Friday evening and Saturday morning, we will be hosting organized LARPs events."}
- - {title: "Wargames",        image: "wargames.jpg",    text: "On Saturday and Sunday, we will be hosting <a href='/assets/40k-2023.pdf'>Warhammer 40k</a> and <a href='/assets/bleedbowl-2023.pdf'>Bloodbowl</a>."}
+ - {title: "Wargames",        image: "wargames.jpg",    text: "On Saturday and Sunday, we will be hosting Warhammer 40k and <a href='/assets/bleedbowl-2024.pdf'>Bloodbowl</a>."}
  - {title: "Boardgames",      image: "boardgames.jpg",  text: "Many boardgames will be available for attendees to play at any time during the convention."}
  - {title: "Charity",         image: "charity.jpg",     text: "On Saturday night, we will be holding a charity auction in the New Bar, with proceeds going to Cork Children's hospital"}
 # Statistic Block
