--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,10 @@ heroButtons:
 # About Block
 aboutTitle: "About Warpcon"
 aboutBlock:
- - {title: "TTRPGs",          image: "ttrpgs.jpg",      text: "D&D5e, Cyberpunk and many other TTRPGs on Friday, Saturday and Sunday."}
- - {title: "CCGs",            image: "ccgs.jpg",        text: "Yu-Gi-Oh, Magic the Gathering, Pokemon and Digimon events & tournaments will be hosted by Sandbox."}
- - {title: "LARPs",           image: "larps.jpg",       text: "On Friday evening and Saturday morning, we will be hosting organized LARPs events."}
- - {title: "Wargames",        image: "wargames.jpg",    text: "On Saturday and Sunday, we will be hosting Warhammer 40k and <a href='/assets/bleedbowl-2024.pdf'>Bloodbowl</a>."}
+ - {title: "TTRPGs",          image: "ttrpgs.jpg",      text: "D&D, Cyberpunk, Homebrew and many other TTRPGs on Friday, Saturday and Sunday."}
+ - {title: "CCGs",            image: "ccgs.jpg",        text: "Magic the Gathering, Pokémon, Yu-Gi-Oh and Lorcana events and tournaments will be hosted by Sandbox"}
+ - {title: "LARPs",           image: "larps.jpg",       text: "All weekend, we will be hosting organized LARPs events."}
+ - {title: "Wargames",        image: "wargames.jpg",    text: "On Saturday and Sunday, we will be hosting Warhammer 40k and <a href='/assets/bleedbowl-2024.pdf'>Bloodbowl</a>. As well as LOTR and smaller tournaments"}
  - {title: "Boardgames",      image: "boardgames.jpg",  text: "Many boardgames will be available for attendees to play at any time during the convention."}
  - {title: "Charity",         image: "charity.jpg",     text: "On Saturday night, we will be holding a charity auction in the New Bar, with proceeds going to Cork Children's hospital"}
 # Statistic Block
@@ -159,7 +159,7 @@ ticketsOffers:
   featured: true
  # buyButtonLink: "https://warpcon.eventbrite.com/"
   buyButtonText: "Coming soon"
-  ticketContentList: ["Admission to Warpcon convention", "Access to all boardgames and TTRPGs", "Access to trader hall"]
+  ticketContentList: ["Admission to Warpcon convention","Access to CCG Tournaments", "Access to all boardgames and TTRPGs"]
   # validFrom: "2014-10-01T00:00"
   # validThrough: "2014-10-23T23:59"
   # disabled: true
