config changed url

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title: "Warpcon 200"
 email: "warpcondirector@gmail.com"
 description: "Warpcon 34 is the 34th annual gaming convention in UCC"
 baseurl: "https://gregorioustechorious.github.io/warpcon.ie/"
-url: "https://www.warpcon.ie"
-# url: "https://gdg-x.github.io"
+url: "https://gregorioustechorious.github.io/warpcon.ie/"
+# url: "https://www.warpcon.ie"
 permalink: "/games/:title"
 # googleAnalyticsTrackingId: "UA-43643469-5"
 # googleAnalyticsSiteUrl: "gdg-x.github.io"
