--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,10 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "Warpcon 200"
 email: "warpcondirector@gmail.com"
 description: "Warpcon 34 is the 34th annual gaming convention in UCC"
-baseurl: "https://gregorioustechorious.github.io/warpcon.ie/"
-url: "https://gregorioustechorious.github.io/warpcon.ie/"
-# url: "https://www.warpcon.ie"
+# baseurl: "https://gregorioustechorious.github.io/warpcon.ie/"
+baseurl: "https://www.warpcon.ie"
+url: "https://www.warpcon.ie"
+# url: "https://gregorioustechorious.github.io/warpcon.ie/"
 permalink: "/games/:title"
 # googleAnalyticsTrackingId: "UA-43643469-5"
 # googleAnalyticsSiteUrl: "gdg-x.github.io"
