added euro sign to day pass

--- a/_config.yml
+++ b/_config.yml
@@ -162,7 +162,7 @@ ticketsOffers:
   # disabled: true
  -
   name: "Day Pass"
-  price: "15"
+  price: "€15"
   # ribbon: "Ribbon Text"
   priceCurrency: "EUR"
   featured: true
