--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ navigationLinks:
   - {permalink: "/", text: "Home"}
   - {permalink: "/games/", text: "Games"}
   - {permalink: "/schedule", text: "Schedule"}
-  - {permalink: "/speakers/", text: "Speakers"}
+#  - {permalink: "/speakers/", text: "Speakers"}
 #  - {permalink: "/team/", text: "Team"}
 #  - {permalink: "/logistics/", text: "Logistics"}
 #  - {permalink: "/hackathon/", text: "Hackathon"}
